--wip-- [skip ci]

--- a/layout/_partials/sidebar/site-overview.njk
+++ b/layout/_partials/sidebar/site-overview.njk
@@ -7,6 +7,13 @@
   <div class="site-description" itemprop="description">{{ description }}</div>
 </div>
 
+
+{%- if theme.follow.enable %}
+<div>
+  <a class="ai-follow" href="https://ai-chan.top/images/wechat_channel.png" target="_blank">关注我</a>
+</div>
+{%- endif %}
+
 {%- if theme.site_state %}
 <div class="site-state-wrap site-overview-item animated">
   <nav class="site-state">
