--- a/source/css/_common/components/post/post-followme.styl
+++ b/source/css/_common/components/post/post-followme.styl
@@ -1,3 +1,27 @@
+
+.ai-follow {
+  align-items: center;
+  background-color: #3273dc;
+  border-color: transparent;
+  border-left: 210px;
+  border-radius: 290486px;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  font-weight: 400;
+  height: 1.5em;
+  justify-content: center;
+  margin: 10px;
+  outline: 0;
+  padding-bottom: calc(.375em - 1px);
+  padding-top: calc(.375em - 1px);
+  text-align: center;
+  text-decoration: none;
+  text-size-adjust: 100%;
+  user-select: none;
+  white-space: nowrap;
+}
+
 .followme {
   color: $grey;
   padding: 1em 1.5em;
